--- a/configs/binds.cfg
+++ b/configs/binds.cfg
@@ -1,49 +1,68 @@
 unbindall
-bind "/" "+showscores"
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
-bind "3" "slot3"
 bind "4" "slot4"
 bind "5" "slot5"
-bind "6" "slot6"
-bind "7" "slot7"
+bind "6" "noclip"
+bind "7" "give weapon_hegrenade;give weapon_flashbang;give weapon_smokegrenade;give weapon_molotov"
 bind "8" "slot8"
 bind "9" "slot9"
 bind "a" "+moveleft"
-bind "alt" "noclip"
 bind "b" "buymenu"
-bind "CTRL" "+duck"
 bind "d" "+moveright"
-bind "DEL" "mute"
 bind "e" "+use"
+bind "f" "+lookatweapon"
+bind "g" "drop"
+bind "h" "sm_rs"
+bind "i" "show_loadout_toggle"
+bind "j" "bind = 2; slam_updatecfg; echo Loaded: ReportOfTheWeek Best Intros!"
+bind "k" "toggleconsole"
+bind "m" "slam_play"
+bind "n" "bind = 1; slam_updatecfg; echo Loaded: neon cat original"
+bind "o" "togglenet"
+bind "q" "lastinv"
+bind "r" "+reload"
+bind "s" "+back"
+bind "t" "+jumpthrow"
+bind "u" "radio1"
+bind "w" "+forward"
+bind "x" "use weapon_knife; use weapon_flashbang"
+bind "z" "messagemode"
+bind "," "buyammo1"
+bind "." "buyammo2"
+bind "=" "1"
+bind "SPACE" "+jump"
+bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
-bind "f" "reload_clear"
-bind "F10" "quit"
+bind "DEL" "mute"
+bind "PAUSE" "pause"
+bind "SHIFT" "+speed"
+bind "CTRL" "+duck"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
 bind "F5" "jpeg"
 bind "F6" "save quick"
 bind "F7" "load quick"
-bind "g" "drop"
-bind "h" "+spray_menu"
-bind "i" "show_loadout_toggle"
-bind "m" "teammenu"
+bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE3" "toggle cl_crosshairsize 2.5 1000"
+bind "MOUSE3" "player_ping"
 bind "MOUSE5" "+voicerecord"
-bind "o" "togglenet"
-bind "p" "toggleconsole"
-bind "PAUSE" "pause"
-bind "q" "lastinv"
-bind "r" "+reload"
-bind "s" "+back"
-bind "SHIFT" "+speed"
-bind "SPACE" "+jump"
-bind "t" "messagemode"
-bind "w" "+forward"
-bind "x" "slot12"
-bind "z" "messagemode2"
+bind "MWHEELUP" "invprev"
+bind "MWHEELDOWN" "invnext"
+bind "JOY1" "+jump"
+bind "JOY2" "+reload"
+bind "JOY3" "+use"
+bind "JOY4" "invnextnongrenade"
+bind "JOY5" "invnextitem"
+bind "JOY6" "+lookspin"
+bind "JOY7" "togglescores"
+bind "JOY8" "gameui_activate"
+bind "JOY10" "+attack2"
+bind "POV_DOWN" "drop"
+bind "Y AXIS NEG" "xmove"
+bind "Z AXIS POS" "+duck"
+bind "Z AXIS NEG" "+attack"
 
 echo "loaded binds.cfg"
