--- a/configs/binds.cfg
+++ b/configs/binds.cfg
@@ -2,43 +2,60 @@ unbindall
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
+bind "3" "slot3"
 bind "4" "slot4"
 bind "5" "slot5"
-bind "6" "noclip"
-bind "7" "give weapon_hegrenade;give weapon_flashbang;give weapon_smokegrenade;give weapon_molotov"
-bind "8" "slot8"
-bind "9" "slot9"
+bind "6" "slot6"
+bind "7" "give weapon_hegrenade;give weapon_flashbang;give weapon_smokegrenade;give weapon_incgrenade;give weapon_molotov"
+bind "8" "bot_add T"
+bind "9" "bot_add CT"
 bind "a" "+moveleft"
 bind "b" "buymenu"
+bind "CTRL" "+duck"
 bind "d" "+moveright"
-bind "e" "+use"
+bind "c" "toggle cl_righthand 0 1"
 bind "f" "+lookatweapon"
 bind "g" "drop"
-bind "h" "sm_rs"
-bind "i" "show_loadout_toggle"
-bind "j" "bind = 2; slam_updatecfg; echo Loaded: ReportOfTheWeek Best Intros!"
-bind "k" "toggleconsole"
-bind "m" "slam_play"
-bind "n" "bind = 1; slam_updatecfg; echo Loaded: neon cat original"
-bind "o" "togglenet"
+bind "h" "i59"
+bind "l" "sv_rethrow_last_grenade"
+bind "m" "teammenu"
+bind "n" "noclip"
+bind "o" "cl_grenadepreview 15"
+bind "p" "cl_sim_grenade_trajectory"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "+jumpthrow"
-bind "u" "radio1"
+bind "t" "messagemode"
+bind "u" "messagemode2"
+bind "e" "+use"
 bind "w" "+forward"
-bind "x" "use weapon_knife; use weapon_flashbang"
-bind "z" "messagemode"
+bind "x" "slam_play"
+bind "KP_INS" "buy p250"
+bind "KP_END" "buy nova"
+bind "KP_DOWNARROW" "buy xm1014"
+bind "KP_PGDN" "buy mac10"
+bind "KP_LEFTARROW" "galilar/famas"
+bind "KP_5" "m4a1/ak47"
+bind "KP_RIGHTARROW" "aug/sg556"
+bind "KP_HOME" "buy ssg08"
+bind "KP_UPARROW" "buy awp"
+bind "KP_PGUP" "g3sg1/scar20"
+bind "KP_SLASH" "buy decoy"
+bind "KP_MULTIPLY" "buy smokegrenade"
+bind "KP_MINUS" "buy flashbang"
+bind "KP_PLUS" "buy hegrenade"
+bind "KP_ENTER" "vesthelm/vest; buy defuser"
+bind "KP_DEL" "buy p90"
+bind "k" "toggleconsole"
 bind "," "buyammo1"
 bind "." "buyammo2"
-bind "=" "1"
 bind "SPACE" "+jump"
-bind "TAB" "+showscores"
+bind "TAB" "+scorenet"
 bind "ESCAPE" "cancelselect"
 bind "DEL" "mute"
 bind "PAUSE" "pause"
 bind "SHIFT" "+speed"
-bind "CTRL" "+duck"
+bind "RCTRL" "+altbinds"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
 bind "F5" "jpeg"
@@ -47,22 +64,10 @@ bind "F7" "load quick"
 bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE3" "player_ping"
-bind "MOUSE5" "+voicerecord"
+bind "MOUSE4" "+voicerecord"
+bind "MOUSE5" "slot3"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
-bind "JOY1" "+jump"
-bind "JOY2" "+reload"
-bind "JOY3" "+use"
-bind "JOY4" "invnextnongrenade"
-bind "JOY5" "invnextitem"
-bind "JOY6" "+lookspin"
-bind "JOY7" "togglescores"
-bind "JOY8" "gameui_activate"
-bind "JOY10" "+attack2"
-bind "POV_DOWN" "drop"
-bind "Y AXIS NEG" "xmove"
-bind "Z AXIS POS" "+duck"
-bind "Z AXIS NEG" "+attack"
+bind x "incrementvar cl_radar_scale 0.67 1 0.33 "
 
 echo "loaded binds.cfg"
