--- a/configs/misc.cfg
+++ b/configs/misc.cfg
@@ -22,17 +22,17 @@ func_break_max_pieces "0"
 gameinstructor_enable "0"
 mat_monitorgamma_tv_enabled "0"
 mm_dedicated_force_servers ""
-mm_dedicated_search_maxping "80" // max ping for matchmaking games
 option_duck_method "0"
 option_speed_method "0"
 password ""
 player_nevershow_communityservermessage "1"
 spec_replay_autostart "0"
 ui_steam_overlay_notification_position "bottomright"
-cl_clanid "37992172"
-cl_mute_enemy_team "0"
+cl_mute_enemy_team "1"
 cl_sanitize_player_names "1"
 cl_hide_avatar_images "2"
-cl_chatfilters "1"
+cl_color 2
+cl_chatfilters 1
+Voice_enable 1
 
 echo "loaded misc.cfg"
