--- a/configs/mouse.cfg
+++ b/configs/mouse.cfg
@@ -4,6 +4,8 @@ m_mouseaccel2 "0"
 m_pitch "0.022"
 m_rawinput "1"
 sensitivity "0.7"
+m_side "0.8"
+m_yaw "0.022"
 zoom_sensitivity_ratio_mouse "1.0"
 
 echo "loaded mouse.cfg"
