--- a/configs/network.cfg
+++ b/configs/network.cfg
@@ -5,7 +5,23 @@ cl_lagcompensation "1"
 cl_predict "1"
 cl_predictweapons "1"
 cl_updaterate "128"
-mm_dedicated_search_maxping "40"
+mm_dedicated_search_maxping "25"
 rate "786432"
+net_allow_multicast "1"
+net_graph "1"
+net_graphheight "9999"
+net_graphholdsvframerate "0"
+net_graphipc "0"
+net_graphmsecs "400"
+net_graphpos "1"
+net_graphproportionalfont "1"
+net_graphshowinterp "1"
+net_graphshowlatency "1"
+net_graphshowsvframerate "0"
+net_graphsolid "1"
+net_graphtext "1"
+net_maxroutable "1200"
+net_scale "5"
+net_steamcnx_allowrelay "1"
 
 echo "loaded network.cfg"
