--- a/configs/crosshair.cfg
+++ b/configs/crosshair.cfg
@@ -1,26 +1,26 @@
-cl_crosshair_drawoutline 0;
-cl_crosshair_dynamic_maxdist_splitratio 0;
-cl_crosshair_dynamic_splitalpha_innermod 1;
-cl_crosshair_dynamic_splitalpha_outermod 1;
-cl_crosshair_dynamic_splitdist 4;
-cl_crosshair_friendly_warning "0"
-cl_crosshair_outlinethickness 0;
+cl_crosshair_drawoutline "0"
+cl_crosshair_dynamic_maxdist_splitratio "0.300000"
+cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_outermod "0.500000"
+cl_crosshair_dynamic_splitdist "7"
+cl_crosshair_friendly_warning "2"
+cl_crosshair_outlinethickness "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "1"
-cl_crosshair_t 0;
-cl_crosshairalpha 800;
-cl_crosshaircolor 1;
-cl_crosshaircolor_b 0;
-cl_crosshaircolor_g 0;
-cl_crosshaircolor_r 255;
-cl_crosshairdot 0;
-cl_crosshairgap -3;
-cl_crosshairgap_useweaponvalue 0;
-cl_crosshairsize 2.5;
-cl_crosshairstyle 4;
-cl_crosshairthickness 0;
-cl_crosshairusealpha 1;
-cl_fixedcrosshairgap -6;
+cl_crosshair_sniper_width "2"
+cl_crosshair_t "0"
+cl_crosshairalpha "255.000000"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "0.000000"
+cl_crosshaircolor_g "0.000000"
+cl_crosshaircolor_r "255.000000"
+cl_crosshairdot "0"
+cl_crosshairgap "-3"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairsize "1.4"
+cl_crosshairstyle "4"
+cl_crosshairthickness "0.8"
+cl_crosshairusealpha "1"
 hud_showtargetid 1;
+cl_teamid_overhead_always 1
 
 echo "loaded crosshair.cfg"
