--- a/configs/hud.cfg
+++ b/configs/hud.cfg
@@ -1,21 +1,16 @@
-cl_draw_only_deathnotices "0"
-cl_hud_background_alpha "0.25"
+
+cl_hide_avatar_images "0"
+cl_hud_background_alpha "0.5"
 cl_hud_bomb_under_radar "0"
-cl_hud_color "1"
+cl_hud_color "5"
 cl_hud_healthammo_style "1"
-cl_hud_playercount_pos "0"
-cl_hud_playercount_showcount "0"
+cl_hud_playercount_pos "1"
+cl_hud_playercount_showcount "1"
 cl_hud_radar_scale "1"
-cl_righthand "1"
+cl_hud_background_alpha "0.5"
+cl_hud_bomb_under_radar "0"
+cl_hud_healthammo_style "1"
+cl_hud_radar_scale "1"
 cl_showfps "1"
-cl_showloadout "1"
-cl_showpos "0"
-cl_teamid_overhead_mode "2"
-cl_teammate_colors_show "1"
-hud_scaling "1"
-hud_showtargetid "1"
-safezonex 1
-safezoney 1
-cl_hud_background_alpha 0
 
 echo "loaded hud.cfg"
