--- a/scripts/togglenetgraph.cfg
+++ b/scripts/togglenetgraph.cfg
@@ -1,6 +1,6 @@
-alias "togglenet" "togglenet_on"
-alias "togglenet_on" "net_graph 1; alias togglenet "togglenet_off""
-alias "togglenet_off" "net_graph 0; alias togglenet "togglenet_on""
+alias "+scorenet" "+showscores; net_graphheight 0"
+alias "-scorenet" "-showscores; net_graphheight 9999"
+bind "TAB" "+scorenet"
 
 
 echo "loaded togglenetgraph.cfg"
